添加反射调用真实方法